--- a/WiredBrainCoffee.UI/wwwroot/index.html
+++ b/WiredBrainCoffee.UI/wwwroot/index.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>WiredBrainCoffee.Client</title>
+    <title>Wired Brain Coffee</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
 
-    <!--<link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
-    <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />-->
     <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
     <link href="css/wiredbrain.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css" rel="stylesheet" />
@@ -18,6 +16,7 @@
 </head>
 
 <body>
+    <div id="alertContainer"></div>
     <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
@@ -25,11 +24,8 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <!--<script src="_content/Blazorise/blazorise.js"></script>
-    <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>-->
     <script src="_content/Blazored.Modal/blazored.modal.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src=""></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
             crossorigin="anonymous"></script>
